--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,12 @@ body {
 }
 
 a {
-  color: #4154f1;
+  color: #000000;
   text-decoration: none;
 }
 
 a:hover {
-  color: #717ff5;
+  color: #444444;
   text-decoration: none;
 }
 
@@ -47,7 +47,7 @@ section {
   letter-spacing: 1px;
   font-weight: 700;
   margin: 0;
-  color: #292929;
+  color: #000000;
   text-transform: uppercase;
 }
 
@@ -78,7 +78,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background: #012970;
+  background: #000000;
   min-height: 40px;
   margin-top: 82px;
   color: #fff;
@@ -134,7 +134,7 @@ section {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: #000000;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -148,7 +148,7 @@ section {
 }
 
 .back-to-top:hover {
-  background: #6776f4;
+  background: #000000;
   color: #fff;
 }
 
@@ -194,7 +194,7 @@ section {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 1px;
-  color: #012970;
+  color: #000000;
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
 }
@@ -246,12 +246,12 @@ section {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #4154f1;
+  color: #000000;
 }
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #4154f1;
+  background: #000000;
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 4px;
@@ -261,7 +261,7 @@ section {
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #5969f3;
+  background: #000000;
 }
 
 .navbar .dropdown ul {
@@ -298,7 +298,7 @@ section {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #4154f1;
+  color: #000000;
 }
 
 .navbar .dropdown:hover>ul {
@@ -324,13 +324,13 @@ section {
 
 .navbar .megamenu ul li a,
 .navbar .megamenu ul li:hover>a {
-  color: #013289;
+  color: #000000;
 }
 
 .navbar .megamenu ul li a:hover,
 .navbar .megamenu ul li .active,
 .navbar .megamenu ul li .active:hover {
-  color: #4154f1;
+  color: #000000;
 }
 
 .navbar .dropdown .dropdown ul {
@@ -360,7 +360,7 @@ section {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #012970;
+  color: #000000;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -417,13 +417,13 @@ section {
 .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #012970;
+  color: #000000;
 }
 
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #4154f1;
+  color: #000000;
 }
 
 .navbar-mobile .getstarted,
@@ -458,7 +458,7 @@ section {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #4154f1;
+  color: #000000;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -471,7 +471,7 @@ section {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.png) top center no-repeat;
+  background: url(../img/hero-bg2.png) top center no-repeat;
   background-size: cover;
 }
 
@@ -479,11 +479,11 @@ section {
   margin: 0;
   font-size: 48px;
   font-weight: 700;
-  color: #012970;
+  color: #000000;
 }
 
 .hero h2 {
-  color: #444444;
+  color: #000000;
   margin: 15px 0 0 0;
   font-size: 26px;
 }
@@ -494,9 +494,9 @@ section {
   padding: 15px 40px;
   border-radius: 4px;
   transition: 0.5s;
-  color: #fff;
-  background: #4154f1;
-  box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
+  color: #000000;
+  background: #ffd000;
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.4);
 }
 
 .hero .btn-get-started span {
@@ -567,21 +567,21 @@ section {
 # About
 --------------------------------------------------------------*/
 .about .content {
-  background-color: #f6f9ff;
+  background-color: #e0e0e0;
   padding: 40px;
 }
 
 .about h3 {
   font-size: 14px;
   font-weight: 700;
-  color: #4154f1;
+  color: #000000;
   text-transform: uppercase;
 }
 
 .about h2 {
   font-size: 24px;
   font-weight: 700;
-  color: #012970;
+  color: #000000;
 }
 
 .about p {
@@ -594,8 +594,8 @@ section {
   padding: 15px 40px;
   border-radius: 4px;
   transition: 0.5s;
-  color: #fff;
-  background: #4154f1;
+  color: #000000;
+  background: #ffd000;
   box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
 }
 
@@ -626,7 +626,7 @@ section {
 --------------------------------------------------------------*/
 .values .box {
   padding: 30px;
-  box-shadow: 0px 0 5px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 5px rgba(0, 0, 0, 0.3);
   text-align: center;
   transition: 0.3s;
   height: 100%;
@@ -640,13 +640,13 @@ section {
 
 .values .box h3 {
   font-size: 24px;
-  color: #012970;
+  color: #000000;
   font-weight: 700;
   margin-bottom: 18px;
 }
 
 .values .box:hover {
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
 }
 
 .values .box:hover img {
@@ -666,21 +666,21 @@ section {
   padding: 30px;
   width: 100%;
   background: #fff;
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
 }
 
 .counts .count-box i {
   font-size: 42px;
   line-height: 0;
   margin-right: 20px;
-  color: #4154f1;
+  color: #000000;
 }
 
 .counts .count-box span {
   font-size: 36px;
   display: block;
   font-weight: 600;
-  color: #0b198f;
+  color: #000000;
 }
 
 .counts .count-box p {
@@ -695,21 +695,21 @@ section {
 --------------------------------------------------------------*/
 .features .feature-box {
   padding: 24px 20px;
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
   height: 100%;
 }
 
 .features .feature-box h3 {
   font-size: 18px;
-  color: #012970;
+  color: #000000;
   font-weight: 700;
   margin: 0;
 }
 
 .features .feature-box i {
   line-height: 0;
-  background: #ecf3ff;
+  background: #fdfae6;
   padding: 4px;
   margin-right: 10px;
   font-size: 24px;
@@ -718,7 +718,7 @@ section {
 }
 
 .features .feature-box:hover i {
-  background: #4154f1;
+  background: #000000;
   color: #fff;
 }
 
@@ -727,7 +727,7 @@ section {
 }
 
 .features .feture-tabs h3 {
-  color: #012970;
+  color: #000000;
   font-weight: 700;
   font-size: 32px;
   margin-bottom: 10px;
@@ -752,7 +752,7 @@ section {
   text-transform: uppercase;
   font-size: 15px;
   font-weight: 600;
-  color: #012970;
+  color: #000000;
   padding: 12px 0;
   margin-right: 25px;
   margin-bottom: -2px;
@@ -766,7 +766,7 @@ section {
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #4154f1;
+    background: #000000;
     box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
   }
   
@@ -789,22 +789,22 @@ section {
 
 
 .features .feture-tabs .nav-link.active {
-  color: #4154f1;
-  border-bottom: 3px solid #4154f1;
+  color: #000000;
+  border-bottom: 3px solid #000000;
 }
 
 .features .feture-tabs .tab-content h4 {
   font-size: 18px;
   margin: 0;
   font-weight: 700;
-  color: #012970;
+  color: #000000;
 }
 
 .features .feture-tabs .tab-content i {
   font-size: 24px;
   line-height: 0;
   margin-right: 8px;
-  color: #4154f1;
+  color: #000000;
 }
 
 .features .feature-icons {
@@ -812,7 +812,7 @@ section {
 }
 
 .features .feature-icons h3 {
-  color: #012970;
+  color: #000000;
   font-weight: 700;
   font-size: 32px;
   margin-bottom: 20px;
@@ -833,7 +833,7 @@ section {
   font-size: 20px;
   font-weight: 700;
   margin: 0 0 10px 0;
-  color: #012970;
+  color: #000000;
 }
 
 .features .feature-icons .content .icon-box i {
@@ -852,7 +852,7 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .service-box {
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
   height: 100%;
   padding: 60px 30px;
   text-align: center;
@@ -1010,7 +1010,7 @@ section {
   padding: 40px 20px;
   background: #fff;
   text-align: center;
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
   position: relative;
   overflow: hidden;
@@ -1074,18 +1074,18 @@ section {
   display: inline-block;
   padding: 8px 40px 10px 40px;
   border-radius: 50px;
-  color: #4154f1;
+  color: #000000;
   transition: none;
   font-size: 16px;
   font-weight: 400;
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   transition: 0.3s;
-  border: 1px solid #4154f1;
+  border: 1px solid #000000;
 }
 
 .pricing .btn-buy:hover {
-  background: #4154f1;
+  background: #000000;
   color: #fff;
 }
 
@@ -1098,7 +1098,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #4154f1;
+  background: #000000;
   color: #fff;
 }
 
@@ -1124,7 +1124,7 @@ section {
 
 .faq .accordion-button:not(.collapsed) {
   background: none;
-  color: #4154f1;
+  color: #000000;
   border-bottom: 0;
 }
 
@@ -1162,8 +1162,8 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #4154f1;
-  border-color: #4154f1;
+  color: #000000;
+  border-color: #000000;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1241,12 +1241,12 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-info h4 {
   font-size: 20px;
-  color: #012970;
+  color: #000000;
   font-weight: 700;
 }
 
 .portfolio .portfolio-wrap .portfolio-info p {
-  color: #012970;
+  color: #000000;
   font-weight: 600;
   font-size: 14px;
   text-transform: uppercase;
@@ -1261,7 +1261,7 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-links a {
   color: #fff;
-  background: #4154f1;
+  background: #000000;
   margin: 10px 2px;
   width: 36px;
   height: 36px;
@@ -1328,16 +1328,16 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid #000000;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: #000000;
 }
 
 .portfolio-details .portfolio-info {
   padding: 30px;
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
 }
 
 .portfolio-details .portfolio-info h3 {
@@ -1432,11 +1432,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid #000000;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: #000000;
 }
 
 .testimonials .swiper-slide {
@@ -1473,7 +1473,7 @@ section {
   text-align: center;
   border-radius: 5px;
   background: #fff;
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
 }
 
@@ -1537,7 +1537,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 20px;
-  color: #012970;
+  color: #000000;
 }
 
 .team .member .member-info span {
@@ -1587,18 +1587,18 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid #000000;
 }
 
 .clients .clients-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: #000000;
 }
 
 /*--------------------------------------------------------------
 # Recent Blog Posts
 --------------------------------------------------------------*/
 .recent-blog-posts .post-box {
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
   height: 100%;
   overflow: hidden;
@@ -1629,7 +1629,7 @@ section {
 
 .recent-blog-posts .post-box .post-title {
   font-size: 24px;
-  color: #012970;
+  color: #000000;
   font-weight: 700;
   margin-bottom: 18px;
   position: relative;
@@ -1651,7 +1651,7 @@ section {
 }
 
 .recent-blog-posts .post-box:hover .post-title {
-  color: #4154f1;
+  color: #000000;
 }
 
 .recent-blog-posts .post-box:hover .post-img img {
@@ -1670,12 +1670,12 @@ section {
 .contact .info-box i {
   font-size: 38px;
   line-height: 0;
-  color: #4154f1;
+  color: #000000;
 }
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: #012970;
+  color: #000000;
   font-weight: 700;
   margin: 20px 0 10px 0;
 }
@@ -1743,7 +1743,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #4154f1;
+  border-color: #000000;
 }
 
 .contact .php-email-form input[type=text],
@@ -1756,7 +1756,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #4154f1;
+  background: #000000;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1805,12 +1805,12 @@ section {
 }
 
 .blog .entry .entry-title a {
-  color: #012970;
+  color: #000000;
   transition: 0.3s;
 }
 
 .blog .entry .entry-title a:hover {
-  color: #4154f1;
+  color: #000000;
 }
 
 .blog .entry .entry-meta {
@@ -1855,7 +1855,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #4154f1;
+  background: #000000;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1898,7 +1898,7 @@ section {
   top: 0;
   bottom: 0;
   width: 3px;
-  background-color: #012970;
+  background-color: #000000;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -1919,7 +1919,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #4154f1;
+  color: #000000;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1978,7 +1978,7 @@ section {
   font-size: 22px;
   margin-bottom: 0px;
   padding: 0;
-  color: #012970;
+  color: #000000;
 }
 
 .blog .blog-author .social-links {
@@ -2028,12 +2028,12 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #4154f1;
+  color: #000000;
 }
 
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
-  color: #012970;
+  color: #000000;
 }
 
 .blog .blog-comments .comment h5 .reply i {
@@ -2096,7 +2096,7 @@ section {
   border-radius: 4px;
   padding: 10px 20px;
   border: 0;
-  background-color: #012970;
+  background-color: #000000;
 }
 
 .blog .blog-comments .reply-form .btn-primary:hover {
@@ -2120,7 +2120,7 @@ section {
 }
 
 .blog .blog-pagination li a {
-  color: #012970;
+  color: #000000;
   padding: 7px 16px;
   display: flex;
   align-items: center;
@@ -2129,7 +2129,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-  background: #4154f1;
+  background: #000000;
 }
 
 .blog .blog-pagination li.active a,
@@ -2148,7 +2148,7 @@ section {
   font-weight: 700;
   padding: 0 0 0 0;
   margin: 0 0 15px 0;
-  color: #012970;
+  color: #000000;
   position: relative;
 }
 
@@ -2180,7 +2180,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #4154f1;
+  background: #000000;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -2205,12 +2205,12 @@ section {
 }
 
 .blog .sidebar .categories ul a {
-  color: #012970;
+  color: #000000;
   transition: 0.3s;
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #4154f1;
+  color: #000000;
 }
 
 .blog .sidebar .categories ul a span {
@@ -2235,12 +2235,12 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a {
-  color: #012970;
+  color: #000000;
   transition: 0.3s;
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #4154f1;
+  color: #000000;
 }
 
 .blog .sidebar .recent-posts time {
@@ -2276,8 +2276,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #4154f1;
-  background: #4154f1;
+  border: 1px solid #000000;
+  background: #000000;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2290,7 +2290,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 .footer {
-  background: #f6f9ff;
+  background: #d6d6d6;
   padding: 0 0 30px 0;
   font-size: 14px;
 }
@@ -2307,7 +2307,7 @@ section {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  color: #012970;
+  color: #000000;
 }
 
 .footer .footer-newsletter form {
@@ -2335,7 +2335,7 @@ section {
   font-size: 16px;
   padding: 0 30px;
   margin: 3px;
-  background: #4154f1;
+  background: #000000;
   color: #fff;
   transition: 0.3s;
   border-radius: 4px;
@@ -2377,7 +2377,7 @@ section {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 1px;
-  color: #012970;
+  color: #000000;
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
 }
@@ -2399,13 +2399,13 @@ section {
 }
 
 .footer .footer-top .social-links a:hover {
-  color: #012970;
+  color: #000000;
 }
 
 .footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #012970;
+  color: #000000;
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
@@ -2439,14 +2439,14 @@ section {
 }
 
 .footer .footer-top .footer-links ul a {
-  color: #013289;
+  color: #000000;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
 }
 
 .footer .footer-top .footer-links ul a:hover {
-  color: #4154f1;
+  color: #444444;
 }
 
 .footer .footer-top .footer-contact p {
@@ -2456,12 +2456,12 @@ section {
 .footer .copyright {
   text-align: center;
   padding-top: 30px;
-  color: #012970;
+  color: #444444;
 }
 
 .footer .credits {
   padding-top: 10px;
   text-align: center;
   font-size: 13px;
-  color: #012970;
+  color: #444444;
 }
